trunk/Archive2/37/47332cb36d0a94/output
main.cpp:10:33: warning: parentheses were disambiguated as a function declaration [-Wvexing-parse]
    std::vector< double > vec_c (int (f));
                                ^~~~~~~~~
main.cpp:10:34: note: add a pair of parentheses to declare a variable
    std::vector< double > vec_c (int (f));
                                 ^
                                 (      )
main.cpp:17:5: error: subscript of pointer to function type 'std::vector<double> (int)'
    vec_c[0] = 1.;
    ^~~~~
1 warning and 1 error generated.
